# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
page_analyzer/: app.py  db.py  func.py  index.html  urls.html
page_analyzer/templates/: form.html  index.html  show.html  urls.html
page_analyzerr/: app.py
page_analyzerr/templates/: form.html  index.html  show.html
