[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer"
authors = ["DaniilIslamgaliev <dante9226@mail.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzerr" },
]

[tool.poetry.dependencies]
python = "^3.11"
Flask = { version = "^3.0.3", markers = "python_version <= '3.11'" }
gunicorn = { version = "^23.0.0", markers = "python_version <= '3.11'" }
python-dotenv = { version = "^1.0.1", markers = "python_version <= '3.11'" }
psycopg2-binary = { version = "^2.9.9", markers = "python_version <= '3.11'" }
validators = { version = "^0.34.0", markers = "python_version <= '3.11'" }
lxml = { version = "^5.3.0", markers = "python_version <= '3.11'" }
requests = { version = "^2.32.3", markers = "python_version <= '3.11'" }
bs4 = { version = "^0.0.2", markers = "python_version <= '3.11'" }

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
